Add Student & Courses Models and Repos

--- a/BrightWeb_BAL/BrightWeb_BAL.csproj
+++ b/BrightWeb_BAL/BrightWeb_BAL.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\" />
     <Folder Include="RequestFeatures\" />
   </ItemGroup>
 
@@ -24,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.13.4" />
   </ItemGroup>
 
   <ItemGroup>
