--- a/BrightWeb/appsettings.json
+++ b/BrightWeb/appsettings.json
@@ -1,13 +1,13 @@
 {
-    "AzureAd": {
-      "Instance": "https://login.microsoftonline.com/",
-      "Domain": "qualified.domain.name",
-      "TenantId": "22222222-2222-2222-2222-222222222222",
-      "ClientId": "11111111-1111-1111-11111111111111111",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "qualified.domain.name",
+    "TenantId": "22222222-2222-2222-2222-222222222222",
+    "ClientId": "11111111-1111-1111-11111111111111111",
 
-      "Scopes": "access_as_user",
-      "CallbackPath": "/signin-oidc"
-    },
+    "Scopes": "access_as_user",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -17,5 +17,10 @@
   "ConnectionStrings": {
     "sqlConnection": "server=YOUSSEF; database=BrightWay; Integrated Security=True; TrustServerCertificate=True"
   },
-    "AllowedHosts": "*"
-  }
+  "JwtSettings": {
+    "validIssuer": "BrightWay",
+    "validAudience": "https://localhost:7285/swagger/index.html",
+    "expires": 3
+  },
+  "AllowedHosts": "*"
+}
