Add Course & Student Controllers and Logic

--- a/BrightWeb/appsettings.json
+++ b/BrightWeb/appsettings.json
@@ -19,7 +19,7 @@
   },
   "JwtSettings": {
     "validIssuer": "BrightWay",
-    "validAudience": "https://localhost:7285/swagger/index.html",
+    "validAudience": "https://localhost:7285",
     "expires": 3
   },
   "AllowedHosts": "*"
