add documents module

--- a/BrightWeb_BAL/BrightWeb_BAL.csproj
+++ b/BrightWeb_BAL/BrightWeb_BAL.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="RequestFeatures\" />
+    <Compile Remove="RequestFeatures\**" />
+    <EmbeddedResource Remove="RequestFeatures\**" />
+    <None Remove="RequestFeatures\**" />
   </ItemGroup>
 
   <ItemGroup>
