--- a/BrightWeb/appsettings.json
+++ b/BrightWeb/appsettings.json
@@ -15,12 +15,14 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "server=YOUSSEF; database=BrightWay; Integrated Security=True; TrustServerCertificate=True"
+    //"sqlConnection": "server=DESKTOP-E9B72GU\\SQLEXPRESS01; database=BrightWay; Integrated Security=True; TrustServerCertificate=True"
+    "sqlConnection": "Data Source=SQL5112.site4now.net;Initial Catalog=db_aa2a93_brightway;User Id=db_aa2a93_brightway_admin;Password=Bwes2024;"
   },
   "JwtSettings": {
     "validIssuer": "BrightWay",
-    "validAudience": "https://localhost:7285",
-    "expires": 3
+    //"validAudience": "https://localhost:7285",
+    "validAudience": "brightway-001-site1.ftempurl.com",
+    "expires": 5
   },
   "AllowedHosts": "*"
 }
